[package]
name = "xmoods-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
