[package]
name = "rmoods-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
tower-http = {version = "0.5.2", features = ["full"]}

# OpenAPI Docs generation
utoipa = {version = "4.2.3", features = ["axum_extras", "chrono"]}
utoipa-swagger-ui = { version = "7", features = ["axum"] }
lazy_static = "1.5.0"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json"] }
project-root = "0.2.2"
