[package]
name = "rmoods-backend"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7.5"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["full"] }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
lazy_static = "1.5.0"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
derive-getters = "0.4.0"
lipsum = "0.9.1"
thiserror = "1.0.62"
serde_with = "3.8.3"
log-derive = "0.4.1"
dotenvy = "0.15.7"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
http = "1.1.0"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.31"